force-app/main/default/objects/User_Notification__c/User_Notification__c.object-meta.xml
<CustomObject>
    <label>User Notification</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>User_Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>