force-app/main/default/objects/User_Notification__c/fields/Is_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Notification</label>
    <type>Checkbox</type>
</CustomField>