force-app/main/default/objects/User_Notification__c/fields/Notification_Preference__c.field-meta.xml
<CustomField>
    <fullName>Notification_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification Preference</label>
    <referenceTo>Notification_Preference__c</referenceTo>
    <relationshipLabel>User Notifications</relationshipLabel>
    <relationshipName>User_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>