force-app/main/default/objects/User_Notification__c/fields/Preference_Name__c.field-meta.xml
<CustomField>
    <fullName>Preference_Name__c</fullName>
    <formula>Notification_Preference__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preference Name</label>
    <type>Text</type>
</CustomField>