force-app/main/default/objects/User_Notification__c/fields/Push_Notification__c.field-meta.xml
<CustomField>
    <fullName>Push_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Push Notification</label>
    <type>Checkbox</type>
</CustomField>