force-app/main/default/objects/User_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Push_Notification__c</columns>
    <columns>Profile__c</columns>
    <columns>User__c</columns>
    <columns>Preference_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>